<resources>
    <!--    Welcome page-->
    <string name="app_name">BigEye</string>
    <string name="login_button">Login</string>
    <string name="go_to_login_button">Go to Login</string>
    <string name="singup_button">SingUp</string>
    <string name="slogan_text">Keep an eye on your sites wherever you are.</string>

    <!--    Login page-->
    <string name="login_with_email">Login with email</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="your_password">Your password</string>

    <!--    SingUp page-->
    <string name="singup_with_email">Sing up with email</string>

    <!--    ConfirmEmail page-->
    <string name="thanks_for_create_account">Thanks for create \naccount.</string>
    <string name="confirm_email">Confirm your email address.\nWe have sent an email with \na confirmation link to your \nemail address. </string>

    <!--    BigEye page-->
    <string name="your_websites">Your\nWebsites</string>

    <!--    AddMonitor page-->
    <string name="add_monitor_text">Add new monitor</string>
    <string name="name_monitor_text">Name</string>
    <string name="description_monitor_text">Description</string>
    <string name="address_monitor_text">Address</string>
    <string name="port_monitor_text">Port</string>
    <string name="timeout_monitor_text">Timeuot</string>
    <string name="success_response_code_monitor_text">Success response code</string>
    <string name="period_monitor_text">Period</string>
    <string name="add_monitor_text_button">Add monitor</string>

    <!--    Menu fragment-->
    <string name="logout">Logout</string>
    <string name="logout_all">Logout from all devices</string>
    <string name="go_to_web">BigEye websites</string>

</resources>