<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/addMonitorButton"
        style="@style/loginAndSingupBtnStyle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/add_monitor_text_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/addMonitorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/add_monitor_text"
        android:textAlignment="center"
        android:textAppearance="@style/topString"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        app:layout_constraintTop_toBottomOf="@+id/addMonitorText"
        tools:layout_editor_absoluteX="1dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/name_monitor_text" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/description_monitor_text" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/address_monitor_text" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/portInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/port_monitor_text"
            android:inputType="number" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/timeoutInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/timeout_monitor_text"
            android:inputType="number" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/responseCodeInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/success_response_code_monitor_text"
            android:inputType="number" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/periodInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/period_monitor_text"
            android:inputType="number" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>