<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/round_menu">

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="TextView"
        android:fontFamily="@font/poppins_medium"
        android:textAlignment="center"
        android:textColor="@color/black_app"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/bigeEyeWebButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_web" />

        <Button
            android:id="@+id/logoutAllButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout_all" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>