<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/SingUpPage">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/singup_with_email"
        android:textAlignment="center"
        android:textAppearance="@style/topString"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/your_email_address"
        android:textAppearance="@style/grey_text_login"
        app:layout_constraintBottom_toTopOf="@+id/emailSignUp"
        app:layout_constraintStart_toStartOf="@+id/emailSignUp" />

    <EditText
        android:id="@+id/emailSignUp"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="90dp"
        android:backgroundTint="@color/grey_app"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/grey_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/your_password"
        android:textAppearance="@style/grey_text_login"
        app:layout_constraintBottom_toTopOf="@+id/passwordSignUp"
        app:layout_constraintStart_toStartOf="@+id/passwordSignUp" />

    <EditText
        android:id="@+id/passwordSignUp"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="90dp"
        android:backgroundTint="@color/grey_app"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/grey_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailSignUp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/signUpButton"
        style="@style/loginAndSingupBtnStyle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:text="@string/singup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignUp" />

</androidx.constraintlayout.widget.ConstraintLayout>